# aur.rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: constants.rs  error.rs  lib.rs  model.rs
src/bridge/: hyper.rs  mod.rs  reqwest.rs
tests/: hyper_support.rs
