[package]
authors = ["Zeyla Hellyer <zeylahellyer@gmail.com>"]
categories = ["api-bindings", "web-programming::http-client"]
description = "HTTP client implementations for the AUR."
documentation = "https://docs.rs/aur"
homepage = "https://github.com/zeyla/aur.rs"
include = ["Cargo.toml", "README.md", "LICENSE.md", "src/**/*.rs"]
keywords = ["api", "arch", "aur"]
license = "ISC"
name = "aur"
readme = "README.md"
repository = "https://github.com/zeyla/aur.rs.git"
version = "0.1.0"

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
branch = "master"
repository = "zeyla/aur.rs"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.futures]
optional = true
version = "~0.1"

[dependencies.hyper]
optional = true
version = "~0.11"

[dependencies.reqwest]
optional = true
version = "~0.8"

[dev-dependencies]
hyper-tls = "~0.1"
tokio-core = "~0.1"

[features]
default = ["hyper-support"]
hyper-support = ["futures", "hyper"]
reqwest-support = ["reqwest"]
